# dino-atlas

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.claude/projects/-Users-konstantinstoldt-Documents-GitHub-dino-atlas/memory/: MEMORY.md  project_dinoatlas.md  user_konstantin.md
backend/: Cargo.toml  Dockerfile
backend/api/: Cargo.toml  Dockerfile  Dockerfile.dev
backend/api/src/: config.rs  error.rs  main.rs
backend/api/src/middleware/: auth.rs  mod.rs
backend/api/src/pocketbase/: client.rs  models.rs
backend/api/src/routes/: auth.rs  budget.rs  dinos.rs  expedition.rs  minigames.rs  mod.rs  museum.rs  players.rs  tts.rs
backend/core/: Cargo.toml
backend/core/src/adapters/pocketbase/: mod.rs
backend/core/src/adapters/valkey/: mod.rs
backend/dino-gen/: Cargo.toml  Dockerfile
backend/dino-gen/src/: main.rs
backend/dino-gen/src/commands/: costs.rs  discover.rs  evaluate.rs  generate.rs  mod.rs  schema.rs  seed.rs  status.rs  story.rs
backend/dino-gen/src/pipeline/: audio.rs  costs.rs  cutout.rs  images.rs  mod.rs  prompts.rs  seed_data.rs  texts.rs
backend/dino-gen/src/providers/: gemini.rs  mod.rs  pocketbase.rs  tts.rs
backend/generator/: Cargo.toml  Dockerfile  Dockerfile.dev
backend/generator/src/jobs/: mod.rs
backend/src/: error.rs  main.rs
backend/src/adapters/: mod.rs
backend/src/adapters/gemini/: mod.rs
backend/src/adapters/tts/: mod.rs
backend/src/domain/models/: mod.rs
backend/src/domain/ports/: mod.rs
backend/src/domain/services/: mod.rs
backend/tts/: Cargo.toml
backend/tts/src/: cache.rs  lib.rs  piper.rs
frontend/: package.json  pnpm-lock.yaml  tsconfig.base.json
frontend/apps/app/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/apps/app/public/: dinos  maps
frontend/apps/app/src/: App.tsx  router.tsx  styles.css
frontend/apps/app/src/components/: AppLayout.tsx  AuthGuard.tsx  TtsAudioPlayer.tsx  TtsProvider.tsx
frontend/apps/app/src/hooks/: use-active-expedition.ts  use-budget.ts  use-dinos.ts  use-museum.ts  use-tts.ts
frontend/apps/app/src/lib/: api.ts  assemble-story.ts
frontend/apps/app/src/pages/: DiscoveryPage.tsx  ExcavationPage.tsx  ExpeditionIntroPage.tsx  HomePage.tsx  IdentifyPage.tsx  LoginPage.tsx  MinigamePage.tsx  MinigameSelectPage.tsx  MuseumDetailPage.tsx  MuseumPage.tsx  ParentResetPage.tsx  PlayerSelectPage.tsx  (+5 more)
frontend/apps/landing/: Dockerfile  index.html  package.json
frontend/apps/landing/src/: main.tsx
frontend/apps/storybook/: Dockerfile.dev  package.json
frontend/apps/storybook/.storybook/: main.ts  preview-head.html  preview.ts
frontend/apps/storybook/stories/: preview.css
frontend/public/dinos/triceratops/: prompts.md
generator/: Cargo.toml  Dockerfile  Dockerfile.dev
generator/src/: main.rs
pocketbase/seed/: import.sh
services/pocketbase/seed/: pb_schema.json  pb_schema_v023.json
services/traefik/dynamic/: middleware.yml
services/tts/: Dockerfile  package.json
services/tts/src/: auth.ts  piper.ts  server.ts
specs/001-konzept/: datamodel.md  spec.md  tasks.md  techspec.md
specs/001-konzept/screens/: README.md  login.html  main.html
specs/001-konzept/screens/01-player-select/: brief.md
specs/001-konzept/screens/02-expedition-intro/: brief.md
specs/001-konzept/screens/03-excavation/: brief.md
specs/001-konzept/screens/04-puzzle/: brief.md
specs/001-konzept/screens/05-identify/: brief.md
specs/001-konzept/screens/06-discovery/: brief.md
specs/001-konzept/screens/07-offline-task/: brief.md
specs/001-konzept/screens/08-museum/: brief.md
specs/001-konzept/screens/09-museum-detail/: brief.md
specs/001-konzept/screens/10-story-time/: brief.md
specs/001-konzept/screens/11-quiz/: brief.md
specs/001-konzept/screens/12-minigame-select/: brief.md
specs/001-konzept/screens/13-sleepy-dinos/: brief.md
specs/001-konzept/screens/14-parent-reset/: brief.md
specs/001-konzept/screens/15-parent-dashboard/: brief.md
specs/001-konzept/screens/16-photo-upload/: brief.md
specs/001-konzept/screens/17-login/: brief.md
traefik/dynamic/: middleware.yml
tts-api/: Dockerfile  package.json
tts-api/src/: server.js
(+74 files in other folders)
