[package]
name = "dino-atlas-api"
version = "0.1.0"
edition = "2024"

[dependencies]
dino-atlas-core = { path = "../core" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }
tower = { version = "0.5", features = ["util"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
