[package]
name = "dino-atlas-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13", features = ["json", "query", "multipart"] }
tracing = "0.1"
