[package]
name = "dino-gen"
version = "0.1.0"
edition = "2024"
description = "CLI tool for generating Dino-Atlas content (images, texts, audio, stories)"

[[bin]]
name = "dino-gen"
path = "src/main.rs"

[dependencies]
dino-atlas-core = { path = "../core" }
clap = { version = "4", features = ["derive", "env"] }
urlencoding = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
