[package]
name = "dino-atlas-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
dino-atlas-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
