[package]
name = "dino-atlas-tts"
version = "0.1.0"
edition = "2024"
description = "Piper TTS wrapper — local, open source text-to-speech"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
md-5 = "0.10"
hex = "0.4"
